// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Column /> should add col prop styles 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
  padding-right: 15px;
  padding-left: 15px;
}

.c1 {
  box-sizing: border-box;
  width: 100%;
}

@media (min-width:576px) {
  .c0 {
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
  }
}

@media (min-width:1200px) {
  .c0 {
    -webkit-flex: 0 0 25%;
    -ms-flex: 0 0 25%;
    flex: 0 0 25%;
    max-width: 25%;
  }
}

<div
    class="c0 c1"
  />
</DocumentFragment>
`;

exports[`<Column /> should add pos prop styles 1`] = `
<DocumentFragment>
  .c0 {
  margin-left: 0%;
  padding-right: 15px;
  padding-left: 15px;
}

.c1 {
  box-sizing: border-box;
  width: 100%;
}

@media (min-width:576px) {
  .c0 {
    margin-left: -50%;
  }
}

@media (min-width:1200px) {
  .c0 {
    margin-left: 25%;
  }
}

<div
    class="c0 c1"
  />
</DocumentFragment>
`;

exports[`<Column /> should render component with default props 1`] = `
<DocumentFragment>
  .c0 {
  padding-right: 15px;
  padding-left: 15px;
}

.c1 {
  box-sizing: border-box;
  width: 100%;
}

<div
    class="c0 c1"
  />
</DocumentFragment>
`;
